--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -82,6 +82,10 @@ spec:
 
         git pull origin $(params.MANIFESTS_GIT_BRANCH)
 
+        PR="pr-$(git rev-parse HEAD | tr -d '\n')"
+
+        git checkout -b $PR
+
         # create a patch 
         echo "-> patching kustomization.yaml"
 
@@ -94,7 +98,7 @@ spec:
 
         git commit -am "$COMMIT_MSG"
         
-        git push origin $(params.MANIFESTS_GIT_BRANCH)
+        git push origin $PR
 
         RESULT_SHA="$(git rev-parse HEAD | tr -d '\n')"
         EXIT_CODE="$?"
@@ -107,7 +111,7 @@ spec:
 
         #PR=`gh pr view $(params.MANIFESTS_GIT_BRANCH)`
         
-        gh pr create --base $(params.MANIFESTS_GIT_BRANCH) --head --title $COMMIT_MSG --body $COMMIT_MSG
+        gh pr create --base $(params.MANIFESTS_GIT_BRANCH) --head $PR --title "$COMMIT_MSG" --body "$COMMIT_MSG"
 
         # Make sure we don't add a trailing newline to the result!
         echo -n "$RESULT_SHA" > $(results.commit.path)
