--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -94,7 +94,9 @@ spec:
         # commit and push
         echo "-> push to branch $(params.MANIFESTS_GIT_BRANCH)"
         
-        export COMMIT_MSG="$(params.MANIFESTS_GIT_BRANCH)@$(params.GIT_REVISION)"
+        export COMMIT_MSG="$PR@$(params.MANIFESTS_GIT_BRANCH)"
+
+        export COMMIT_BODY="$COMMIT_MSG \n\n $(params.GIT_COMMIT_MESSAGE) \n\n $(params.GIT_PUSHER_NAME) - $(params.GIT_PUSHER_EMAIL)"
 
         git commit -am "$COMMIT_MSG"
         
@@ -111,7 +113,7 @@ spec:
 
         #PR=`gh pr view $(params.MANIFESTS_GIT_BRANCH)`
         
-        gh pr create --base $(params.MANIFESTS_GIT_BRANCH) --head $PR --title "$COMMIT_MSG" --body "$COMMIT_MSG"
+        gh pr create --base $(params.MANIFESTS_GIT_BRANCH) --head $PR --title "$COMMIT_MSG" --body "$COMMIT_BODY"
 
         # Make sure we don't add a trailing newline to the result!
         echo -n "$RESULT_SHA" > $(results.commit.path)
