--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -12,10 +12,10 @@ spec:
   params:
     - name: MANIFESTS_GIT
       type: string
-    - name: MANIFESTS_GIT_BRANCH
-      type: string
 
     - name: GIT_REVISION
+      type: string
+    - name: GIT_BRANCH_REF
       type: string
     - name: GIT_PUSHER_NAME
       type: string
@@ -69,6 +69,11 @@ spec:
 
         gh auth setup-git
 
+        # extract the branch ref
+        IFS="/" read -a branchref <<< "$(params.GIT_BRANCH_REF)"
+        
+        BRANCH="${branchref[-1]}"
+
         # clone the repo
         echo "-> cloning $(params.MANIFESTS_GIT)"
 
@@ -78,11 +83,10 @@ spec:
 
         cd git-update-digest-workdir
 
-        git checkout -b $(params.MANIFESTS_GIT_BRANCH)
+        git checkout -b $BRANCH
 
-        git pull origin $(params.MANIFESTS_GIT_BRANCH)
+        git pull origin $BRANCH
 
-        #PR="pr-$(git rev-parse HEAD | tr -d '\n')"
         PR="pr-$(params.GIT_REVISION)"
 
         git checkout -b $PR
@@ -93,9 +97,9 @@ spec:
         echo "resources:\n\t$(params.NEW_IMAGE)$(date +%s)" > $(params.KUSTOMIZATION_PATH)/kustomization.yaml
 
         # commit and push
-        echo "-> push to branch $(params.MANIFESTS_GIT_BRANCH)"
+        echo "-> pushing to branch $PR"
         
-        export COMMIT_MSG="$PR@$(params.MANIFESTS_GIT_BRANCH)"
+        export COMMIT_MSG="$PR@$BRANCH"
 
         export COMMIT_BODY="$COMMIT_MSG \n\n $(params.GIT_COMMIT_MESSAGE) \n\n $(params.GIT_PUSHER_NAME) - $(params.GIT_PUSHER_EMAIL)"
 
@@ -103,6 +107,11 @@ spec:
         
         git push origin $PR
 
+        # create a PR
+
+        gh pr create --base $BRANCH --head $PR --title "$COMMIT_MSG" --body "$COMMIT_BODY"
+
+        # Make sure we don't add a trailing newline to the result!
         RESULT_SHA="$(git rev-parse HEAD | tr -d '\n')"
         EXIT_CODE="$?"
         if [ "$EXIT_CODE" != 0 ]
@@ -110,11 +119,4 @@ spec:
           exit $EXIT_CODE
         fi
 
-        # create a PR
-
-        #PR=`gh pr view $(params.MANIFESTS_GIT_BRANCH)`
-        
-        gh pr create --base $(params.MANIFESTS_GIT_BRANCH) --head $PR --title "$COMMIT_MSG" --body "$COMMIT_BODY"
-
-        # Make sure we don't add a trailing newline to the result!
         echo -n "$RESULT_SHA" > $(results.commit.path)
