--- a/pipeline/task_github_update_deployment.yaml
+++ b/pipeline/task_github_update_deployment.yaml
@@ -32,14 +32,7 @@ spec:
       type: string
     - name: KUSTOMIZATION_PATH
       type: string
-  
-  #workspaces:
-  #  - description: The workspace consisting of maven project.
-  #    name: workspace
-  workspaces:
-    - mountPath: /workspace/source
-      name: source
-
+      
   results:
     - name: commit
       description: The commit SHA
@@ -52,7 +45,7 @@ spec:
   steps:
     - name: validate-github
       image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
-      workingDir: $(workspaces.workspace.path)
+      workingDir: $(workspaces.source.path)
       script: |
         echo "-> Validating authentication against github.com"
 
@@ -61,14 +54,15 @@ spec:
         pwd
 
         ls -la
-
-    - name: git-clone
-      image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
-      workingDir: $(workspaces.source.path)
+      
       volumeMounts:
         - mountPath: /gen-source
           name: gen-source
 
+    - name: git-clone
+      image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
+      workingDir: $(workspaces.source.path)
+      
       script: |
         # clone the repo
         echo "-> cloning $(params.MANIFESTS_GIT)"
@@ -81,4 +75,15 @@ spec:
 
         ls -la
 
+      volumeMounts:
+        - mountPath: /gen-source
+          name: gen-source
+
+  workspaces:
+    - mountPath: /workspace/manifest
+      name: manifest
+  volumes:
+    - emptyDir: {}
+      name: gen-source
+  
     
