refactoring the pipeline

--- a/pipeline/trigger_template.yaml
+++ b/pipeline/trigger_template.yaml
@@ -58,3 +58,6 @@ spec:
           - name: workspace
             persistentVolumeClaim:
               claimName: nodejs-build-workspace
+          - name: audit
+            persistentVolumeClaim:
+              claimName: nodejs-audit-workspace
