--- a/pipeline/pvc.yaml
+++ b/pipeline/pvc.yaml
@@ -9,3 +9,15 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
+--- 
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nodejs-audit-workspace
+spec:
+  resources:
+    requests:
+      storage: 2Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
