refactoring the pipeline

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -45,7 +45,7 @@ spec:
     - name: MANIFESTS_GIT
       type: string
       default: "https://github.com/redhat-capgemini-exchange/nodejs-gitops"
-    
+
   workspaces:
     - name: workspace
     - name: audit
@@ -72,9 +72,28 @@ spec:
         - name: output
           workspace: workspace
 
-    - name: update-manifest
+    - name: build
+      params:
+        - name: IMAGE
+          value: $(params.IMAGE_STREAM)
+        - name: TLSVERIFY
+          value: "false"
+        - name: PATH_CONTEXT
+          value: $(params.PATH_CONTEXT)
+        - name: VERSION
+          value: $(params.BUILDER_VERSION)
       runAfter:
         - git-clone
+      taskRef:
+        kind: ClusterTask
+        name: s2i-nodejs
+      workspaces:
+        - name: source
+          workspace: workspace
+
+    - name: update-manifest
+      runAfter:
+        - build
       taskRef:
         name: github-update-manifest
       params:
@@ -89,10 +108,10 @@ spec:
         - name: GIT_PUSHER_EMAIL
           value: $(params.GIT_PUSHER_EMAIL)
         - name: GIT_COMMIT_MESSAGE
-          value: $(params.GIT_COMMIT_MESSAGE)  
+          value: $(params.GIT_COMMIT_MESSAGE)
         - name: IMAGE_DIGEST
-          value: $(params.GIT_REVISION)
-        
+          value: $(tasks.build.results.IMAGE_DIGEST)
+
         # remove
         - name: CURRENT_IMAGE
           value: $(params.IMAGE_STREAM)
@@ -110,25 +129,6 @@ spec:
     #    - git-clone
     #  taskRef:
     #    name: npm-test
-    #  workspaces:
-    #    - name: source
-    #      workspace: workspace
-
-    #- name: build
-    #  params:
-    #    - name: IMAGE
-    #      value: $(params.IMAGE_STREAM)
-    #    - name: TLSVERIFY
-    #      value: "false"
-    #    - name: PATH_CONTEXT
-    #      value: $(params.PATH_CONTEXT)
-    #    - name: VERSION
-    #      value: $(params.BUILDER_VERSION)
-    #  runAfter:
-    #    - git-clone
-    #  taskRef:
-    #    kind: ClusterTask
-    #    name: s2i-nodejs
     #  workspaces:
     #    - name: source
     #      workspace: workspace
