--- a/pipeline/task_github_update_manifest.yaml
+++ b/pipeline/task_github_update_manifest.yaml
@@ -147,8 +147,8 @@ spec:
         # commit and push to branch
         echo "-> pushing to branch $PR"
 
-        export COMMIT_MSG="MSG-$PR"
-        export COMMIT_BODY="BODY-$PR"
+        COMMIT_MSG="$PR"
+        AUDIT_MSG="$(date +%s): $PR $(params.GIT_PUSHER_NAME)/$(params.GIT_PUSHER_EMAIL)   \nDigest: $(params.IMAGE_DIGEST)  \n$(params.GIT_COMMIT_MESSAGE)   \n\n"
 
         git status
 
@@ -157,7 +157,7 @@ spec:
         git push origin $PR
 
         # create a PR
-        gh pr create --base $BRANCH --head $PR --title "$COMMIT_MSG" --body "$COMMIT_BODY"
+        gh pr create --base $BRANCH --head $PR --title "$COMMIT_MSG" --body "$AUDIT_MSG"
 
       volumeMounts:
         - mountPath: /gen-source
