--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -7,6 +7,13 @@ spec:
     - name: APP_NAME
       type: string
       default: "nodejs-gitops"
+    - name: NAMESPACE
+      type: string
+      default: "nodejs-gitops-pipeline"
+
+    - name: MANIFESTS_GIT
+      type: string
+      default: "https://github.com/redhat-capgemini-exchange/nodejs-gitops"
 
     - name: GIT_REPO
       type: string
@@ -27,24 +34,16 @@ spec:
       type: string
       default: "commit"
 
+    - name: IMAGE_STREAM
+      type: string
+      default: >-
+        image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops
     - name: BUILDER_VERSION
       type: string
       default: "14-ubi8"
     - name: PATH_CONTEXT
       type: string
-      default: "."
-
-    - name: IMAGE_STREAM
-      type: string
-      default: >-
-        image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops
-    - name: IMAGE_TAG
-      type: string
-      default: latest
-
-    - name: MANIFESTS_GIT
-      type: string
-      default: "https://github.com/redhat-capgemini-exchange/nodejs-gitops"
+      default: "."  
 
   workspaces:
     - name: workspace
@@ -91,6 +90,23 @@ spec:
         - name: source
           workspace: workspace
 
+    - name: tag-image-stream
+      taskRef:
+        name: tag-image-stream
+      runAfter:
+        - build
+      params:
+        - name: GIT_REVISION
+          value: $(params.GIT_REVISION)
+        - name: GIT_BRANCH_REF
+          value: $(params.GIT_BRANCH_REF)
+        - name: IMAGE_DIGEST
+          value: $(tasks.build.results.IMAGE_DIGEST)
+        - name: IMAGE_NAME
+          value: $(params.APP_NAME)
+        - name: NAMESPACE
+          value: $(params.NAMESPACE)
+
     - name: update-manifest
       runAfter:
         - build
@@ -133,19 +149,3 @@ spec:
     #    - name: source
     #      workspace: workspace
 
-    #- name: tag-build
-    #  taskRef:
-    #    name: tag-image
-    #  runAfter:
-    #    - build
-    #  params:
-    #    - name: commit
-    #      value: $(params.GIT_COMMIT)
-    #    - name: IMAGE_NAME
-    #      value: $(params.APP_NAME)
-    #    - name: REF
-    #      value: $(params.REF)
-    #    - name: NAMESPACE
-    #      value: $(params.NAMESPACE)
-    #- name: digest
-    #  value: $(tasks.build.results.IMAGE_DIGEST)
