--- a/app/dev/app.yaml
+++ b/app/dev/app.yaml
@@ -37,7 +37,7 @@ spec:
     spec:
       containers:
         - name: nodejs-gitops
-          image: "image-registry.openshift-image-registry.svc:5000/foo/bar:latest"
+          image: "image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops:develop"
           imagePullPolicy: IfNotPresent
           resources:
             limits:
