refactoring the pipeline

--- a/pipeline/build_pipeline.yaml
+++ b/pipeline/build_pipeline.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: pipeline-nodejs-gitops
+  name: nodejs-gitops-build-pipeline
 spec:
   params:
     - name: APP_NAME
