--- a/app/dev/rolebindings.yaml
+++ b/app/dev/rolebindings.yaml
@@ -11,3 +11,17 @@ subjects:
   - kind: ServiceAccount
     name: default
     namespace: nodejs-gitops-dev
+--- 
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: nodejs-dev-pipeline-rolebinding
+  namespace: nodejs-gitops-dev
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:deployer
+subjects:
+  - kind: ServiceAccount
+    name: pipeline
+    namespace: nodejs-gitops-pipeline
