--- a/app/dev/rolebindings.yaml
+++ b/app/dev/rolebindings.yaml
@@ -20,7 +20,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:openshift:controller:deploymentconfig-controller
+  name: cluster-admin
 subjects:
   - kind: ServiceAccount
     name: pipeline
