--- a/pipelines/rollout/pvc.yaml
+++ b/pipelines/rollout/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: release-workspace
+  name: rollout-workspace
 spec:
   resources:
     requests:
