--- a/pipelines/rollout/trigger_template.yaml
+++ b/pipelines/rollout/trigger_template.yaml
@@ -26,7 +26,7 @@ spec:
             value: "nodejs-gitops-pipeline"
 
         pipelineRef:
-          name: release-pipeline
+          name: rollout-pipeline
 
         resources: []
         workspaces:
