--- a/pipelines/rollout/task_noop.yaml
+++ b/pipelines/rollout/task_noop.yaml
@@ -9,7 +9,7 @@ spec:
       type: string
   steps:
     - name: msg
-      image: image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/gitops-cli:latest
+      image: image-registry.openshift-image-registry.svc:5000/openshift/gitops-cli:1.0.0
       script: |
         #!/usr/bin/env bash
 
