--- a/app/release/app.yaml
+++ b/app/release/app.yaml
@@ -37,7 +37,7 @@ spec:
     spec:
       containers:
         - name: nodejs-gitops
-          image: "image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops:develop"
+          image: "image-registry.openshift-image-registry.svc:5000/nodejs-gitops-pipeline/nodejs-gitops:release"
           imagePullPolicy: IfNotPresent
           resources:
             limits:
@@ -92,42 +92,3 @@ spec:
       dnsPolicy: ClusterFirst
       securityContext: {}
       schedulerName: default-scheduler
---- 
-kind: Service
-apiVersion: v1
-metadata:
-  name: nodejs-gitops
-  labels:
-    app: nodejs-gitops
-  annotations:
-    description: Exposes and load balances the application pods
-    service.alpha.openshift.io/dependencies: '[{"name": "postgresql", "kind": "Service"}]'
-spec:
-  ipFamilies:
-    - IPv4
-  ports:
-    - name: web
-      protocol: TCP
-      port: 8080
-      targetPort: 8080
-  internalTrafficPolicy: Cluster
-  type: ClusterIP
-  ipFamilyPolicy: SingleStack
-  sessionAffinity: None
-  selector:
-    name: nodejs-gitops
-status:
-  loadBalancer: {}
---- 
-kind: Route
-apiVersion: route.openshift.io/v1
-metadata:
-  name: nodejs-gitops
-  labels:
-    app: nodejs-gitops
-spec:
-  to:
-    kind: Service
-    name: nodejs-gitops
-    weight: 100
-  wildcardPolicy: None
