--- a/app/pipelines.yaml
+++ b/app/pipelines.yaml
@@ -18,7 +18,7 @@ spec:
       recurse: true
     path: pipelines/build
     repoURL: https://github.com/redhat-capgemini-exchange/nodejs-gitops
-    targetRevision: develop
+    targetRevision: main
 --- 
 kind: Application
 apiVersion: argoproj.io/v1alpha1
@@ -40,4 +40,18 @@ spec:
       recurse: true
     path: pipelines/rollout
     repoURL: https://github.com/redhat-capgemini-exchange/nodejs-gitops
-    targetRevision: develop
+    targetRevision: main
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: nodejs-dev-pipeline-rolebinding
+  namespace: nodejs-gitops-dev
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+  - kind: ServiceAccount
+    name: pipeline
+    namespace: nodejs-gitops-pipeline
